--- a/p8105_hw1_zh2493.md
+++ b/p8105_hw1_zh2493.md
@@ -31,23 +31,23 @@ df
     ## # A tibble: 10 x 4
     ##    vec_numeric vec_logical vec_char vec_factor
     ##          <dbl> <lgl>       <chr>    <fct>     
-    ##  1     -1.03   FALSE       M        blue      
-    ##  2      0.0722 TRUE        Y        blue      
-    ##  3     -0.232  FALSE       N        yellow    
-    ##  4      0.540  TRUE        A        yellow    
-    ##  5     -1.65   FALSE       M        yellow    
-    ##  6      0.172  TRUE        E        yellow    
-    ##  7      0.807  TRUE        I        green     
-    ##  8      1.30   TRUE        S        green     
-    ##  9     -0.0548 FALSE       Z        green     
-    ## 10      1.91   TRUE        Q        green
+    ##  1    0.688    TRUE        M        blue      
+    ##  2    0.527    TRUE        Y        blue      
+    ##  3    0.477    TRUE        N        yellow    
+    ##  4   -0.000606 FALSE       A        yellow    
+    ##  5   -0.385    FALSE       M        yellow    
+    ##  6    0.312    TRUE        E        yellow    
+    ##  7   -0.383    FALSE       I        green     
+    ##  8   -0.122    FALSE       S        green     
+    ##  9    1.20     TRUE        Z        green     
+    ## 10    1.40     TRUE        Q        green
 
 ``` r
 mean1_df = mean(pull(df, vec_numeric))
 mean1_df
 ```
 
-    ## [1] 0.1834657
+    ## [1] 0.3708865
 
 ``` r
 mean2_df = mean(pull(df, vec_logical))
@@ -79,3 +79,47 @@ mean4_df
 ```
 
     ## [1] NA
+
+There are two warning messages because column 3 and column 4 is not
+numeric or logical, so they do not have mean.
+
+``` r
+vec_logical = as.numeric(vec_logical)
+vec_char = as.numeric(vec_char)
+vec_factor = as.numeric(vec_factor)
+```
+
+when i run it, i find that the logical vector and the factor vector can
+turn to numeric. However, the character vector can not turn to numeric.
+
+\#\#Problem 2
+
+``` r
+library(tidyverse)
+data("penguins", package = "palmerpenguins")
+```
+
+The names of the data are species, island, bill\_length\_mm,
+bill\_depth\_mm, flipper\_length\_mm, body\_mass\_g, sex, year.
+
+The number of the row in the data is 344 and the number of the column in
+the data is 8.
+
+The mean flipper length is 200.9152047.
+
+``` r
+ggplot(penguins, aes(x = bill_length_mm, y = flipper_length_mm)) +
+  geom_point(aes(color = species))
+```
+
+    ## Warning: Removed 2 rows containing missing values (geom_point).
+
+![](p8105_hw1_zh2493_files/figure-gfm/unnamed-chunk-5-1.png)<!-- -->
+
+``` r
+ggsave("scatterplot.pdf")
+```
+
+    ## Saving 7 x 5 in image
+
+    ## Warning: Removed 2 rows containing missing values (geom_point).
